--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -13,8 +14,11 @@ import Header from "../components/Header.astro";
     <title>Astro Basics</title>
   </head>
 
-  <body class="min-h-screen bg-base-100 text-base-content">
+  <body class="min-h-screen bg-base-100 text-base-content flex flex-col">
     <Header />
-    <slot />
+    <main class="flex-1">
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
