--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,32 @@
   --noise: 0;
 }
 
+/* ========== FOOTER ========== */
+
+.bg-base-900 {
+  background-color: #1e293b;
+}
+
+.text-base-100 {
+  color: #f1f5f9;
+}
+
+.text-base-400 {
+  color: #cbd5e1;
+}
+
+.text-base-700 {
+  color: #334155;
+}
+
+.text-base-800 {
+  background-color: #0f172a;
+}
+
+.bg-base-800 {
+  background-color: #0f172a;
+}
+
 /* ========== BOUTONS ========== */
 
 .btn-primary {
