essais de composant de changement de couleur

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,8 +70,12 @@ import user from "../assets/user.svg";
             class="h-6 md:h-7 lg:h-6 w-auto"
           />
         </button>
-        <button class="hidden xl:inline hover:text-primary transition-colors">
-          <img src={user.src} alt="Utilisateur" class="h-6 lg:h-6 w-auto" />
+        <button class="hover:text-primary transition-colors">
+          <img
+            src={user.src}
+            alt="Utilisateur"
+            class="h-6 md:h-7 lg:h-6 w-auto"
+          />
         </button>
 
         <button
