--- a/src/pages/configurateur.astro
+++ b/src/pages/configurateur.astro
@@ -1,13 +1,27 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import CouleursLunettes from "../components/CouleursLunettes.astro";
+import Lunettes from "../components/Lunettes.astro";
 ---
 
 <Layout>
-  <h1>test</h1>
-  <h1>test</h1>
-  <h1>test</h1>
-  <h1>test</h1>
-  <h1>test</h1>
-  <h1>test</h1>
-  <h1>test</h1>
+  <main
+    style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 4rem;"
+  >
+    <h1>Personnalisez vos lunettes</h1>
+
+    <Lunettes />
+    <CouleursLunettes />
+
+    <script is:inline>
+      window.addEventListener("changeCouleurLunettes", (e) => {
+        const couleur = e.detail.couleur;
+        const partie = document.getElementById("monture");
+        if (partie) {
+          partie.style.transition = "fill 0.3s ease";
+          partie.setAttribute("fill", couleur);
+        }
+      });
+    </script>
+  </main>
 </Layout>
